It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Thu, Aug 20, 2009
---------------------------------------------------------------------
- Added support for unattended [rake crm:setup] and [rake crm:setup:admin] tasks.
- Warn about database reset in [rake crm:setup] task.
- Removed dependency on Highline gem and removed it from vendors/gems.

Wed, Aug 19, 2009
---------------------------------------------------------------------
- Added view hooks on landing pages of all major models.

Tue, Aug 18, 2009
---------------------------------------------------------------------
- More work on [crm_issues] plugin.

Mon, Aug 17, 2009
---------------------------------------------------------------------
- Work on [crm_issues] plugin.

Sat, Aug 15, 2009
---------------------------------------------------------------------
- Implemented plugin dependencies to be able to change plugin loading order.
- Pass on [lead.id] when converting it into a contact (LH #86).
- Corrected format of opportunity closing date (GH #7).

Fri, Aug 14, 2009
---------------------------------------------------------------------
- Reviewed pccl fork and [fat_free_issues] plugin.

Thu, Aug 13, 2009
---------------------------------------------------------------------
- Added user search and pagination to Admin/Users.

Wed, Aug 12, 2009
---------------------------------------------------------------------
- Adding search and pagination to Admin/Users.

Tue, Aug 11, 2009
---------------------------------------------------------------------
- Installed [Highline] gem in vendor/gems for [rake crm:setup:admin] task.
- Implemented [rake crm:setup:admin] task to create admin user.

Sat, Aug 8, 2009
---------------------------------------------------------------------
- Added :before_destroy filters for User model.
- Implemented deleting users in Admin interface.