@@ -2,7 +2,8 @@
   -# The following form gets submitted to #create when @authentication is nil,
   -# or to #update when @authentication is not nil (ex. suspended).
   - form_for @authentication, :url => authentication_path do |f|
-    .title_tools== Don't have an account? #{link_to 'Sign Up Now!', signup_path}
+    - if can_signup?
+      .title_tools== Don't have an account? #{link_to 'Sign Up Now!', signup_path}
     .title Login
     .warn= "Invalid username or password" unless f.error_messages.blank?
     .section
@@ -10,10 +11,9 @@
       = f.text_field :username
       .label Password:
       = f.password_field :password
-    .label
-      .check_box
-        = f.check_box(:remember_me) << " Remember me"
 
+    %div(style="margin-left:12px") #{f.check_box(:remember_me)} Remember me
+    %br
     .buttonbar
       = f.submit "Login"
       or 
