@@ -1,2 +1,4 @@
 = show_flash(:sticky => true)
 .tabless= yield
+%br
+= render :partial => "layouts/about"
