@@ -4,15 +4,14 @@
     %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
     %title Fat Free CRM
     == <!-- #{controller.controller_name} : #{controller.action_name} -->
-    = stylesheet_link_tag "screen", :cache => "cache/all"
+    = stylesheet_link_tag "screen", "/facebox/facebox.css", :cache => "cache/all"
     - unless tabless_layout?
       = stylesheet_link_tag "calendar_date_select/default.css"
-      = stylesheet_link_tag "/facebox/facebox.css"
     %style= yield :styles
 
-    = javascript_include_tag :defaults, :cache => "cache/all"
+    = javascript_include_tag :defaults, "/facebox/facebox.js", :cache => "cache/all"
     - unless tabless_layout?
-      = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", "/facebox/facebox.js", :cache => "cache/classes"
+      = javascript_include_tag "crm_classes.js", "calendar_date_select/calendar_date_select.js", "calendar_date_select/format_american.js", :cache => "cache/classes"
     %script{:type => "text/javascript"}= yield :javascript
 
   %body
