@@ -8,5 +8,6 @@
       = f.password_field :password
       .label Password confirmation:
       = f.password_field :password_confirmation
+    %br
     .buttonbar
       = f.submit "Update Password and Login"
