@@ -5,5 +5,6 @@
     .section
       .label Email address:
       = text_field_tag :email
+    %br
     .buttonbar
       = submit_tag "Reset Password"
