@@ -4,11 +4,17 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fri, Aug 20, 2009
+---------------------------------------------------------------------
+- Added new :user_signup setting (see config/settings.yml).
+- User signups are only allowed if :user_signup is set to :allowed or :needs_approval.
+
 Thu, Aug 20, 2009
 ---------------------------------------------------------------------
 - Added support for unattended [rake crm:setup] and [rake crm:setup:admin] tasks.
 - Warn about database reset in [rake crm:setup] task.
 - Removed dependency on Highline gem and removed it from vendors/gems.
+- Added [:user_signup] setting and started with the signup permissions.
 
 Wed, Aug 19, 2009
 ---------------------------------------------------------------------
